--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,10 +2,10 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
     hooks:
-      - id: trailing-whitespace
-      - id: end-of-file-fixer
+#      - id: trailing-whitespace
+#      - id: end-of-file-fixer
       - id: detect-aws-credentials
-      - id: check-docstring-first
+#      - id: check-docstring-first
       - id: check-json
       - id: check-toml
       - id: check-yaml
