--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,14 +13,14 @@ repos:
         args: [ "--autofix", "--indent=2", "--no-sort-keys" ]
 
   ### Security Scan for AWS Secrets ###
-  - repo: local
-    hooks:
-      - id: trufflehog
-        name: TruffleHog
-        description: Detect secrets in your data.
-        entry: bash -c 'trufflehog git file://. --since-commit HEAD --no-verification --fail --no-update'
-        language: system
-        stages: [ "pre-commit", "pre-push" ]
+#  - repo: local
+#    hooks:
+#      - id: trufflehog
+#        name: TruffleHog
+#        description: Detect secrets in your data.
+#        entry: bash -c 'trufflehog git file://. --since-commit HEAD --no-verification --fail --no-update'
+#        language: system
+#        stages: [ "pre-commit", "pre-push" ]
 
 #  - repo: https://github.com/psf/black
 #    rev: 25.1.0
